# nft-evo-tickets

./: .env.example  .env.railway  .env.vercel  .gitignore  .vercelignore  Anchor.toml  README.md  TICKET_FLOW_GUIDE.md  bundlr-keypair.json  create-test-keypairs.js  get_key58.js  nixpacks.toml  package-lock.json  package.json  railway.json  security.txt  tsconfig.json  vercel.json
.devcontainer/: devcontainer.json
app/: package-lock.json  package.json  vite.config.ts
backend/: package-lock.json  package.json  tsconfig.json
docs/: INSTRUCTION_RENAME_SUMMARY.md  MARKETPLACE.md  MULTIPLE_TICKETS_IMPLEMENTATION.md  POINTS_ON_TICKET_PURCHASE.md  PURCHASE_TICKET_IMPLEMENTATION.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
programs/nft-evo-tickets/: Cargo.toml
programs/nft-evo-tickets/src/: constants.rs  error.rs  lib.rs
programs/nft-evo-tickets/src/instructions/: buy_event_ticket.rs  buy_marketplace_ticket.rs  buy_ticket.rs  cancel_listing.rs  create_event.rs  delete_event.rs  initialize.rs  initialize_event.rs  list_ticket.rs  mint_ticket.rs  mod.rs  set_scanner.rs  update_event.rs  update_ticket.rs  update_ticket_metadata.rs  upgrade_to_collectible.rs
programs/nft-evo-tickets/src/managers/: event_manager.rs  mod.rs  ticket_manager.rs
programs/nft-evo-tickets/src/state/: mod.rs
scripts/: batch-mint-tickets.ts  check-my-tickets.ts  check-ticket-status.ts  create-new-event.ts  create-qr-ticket.ts  fetch-all-events.ts  inspect-event.ts  integrated-ticket-system.ts  reset-scanner.ts  (+1 more)
tests/: setup.ts  (+3 more)
(+111 files in other folders)
